# routes/index.js
@@ -5,7 +5,7 @@ const lesson1Controller = require('../controllers/lesson1')
 
 routes.get('/', lesson1Controller.alexRoute)
 routes.get('/jada', lesson1Controller.jadaRoute)
-routes.get('/jonas', lesson1Controller.jonasRoute)
+routes.get('/', lesson1Controller.mitchellRoute)
 
 const addContactsRoutes = require('./contacts')
 addContactsRoutes(routes)
